theme config'd; ToDo: .nav_script, populate posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Bitthole
+logo: /assets/img/logo.jpg
+description: My professional blogging page and learning terminus.
 show_downloads: true
-google_analytics:
+google_analytics: G-NX6ZS4JEPL
 theme: jekyll-theme-minimal
